Added information Eyes Movement

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="./img/splash.png" class="card-img-top" alt="..." />
+              <img src="./img/splash-eyes.png" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Moving Eyes</h5>
                 <p class="card-text">
@@ -115,7 +115,12 @@
                   class="btn btn-primary"
                   >Github repository</a
                 >
-                <a href="#" target="blank" class="btn btn-primary">Demo</a>
+                <a
+                  href="https://bayardorivas.github.io/Eyes-Movement/"
+                  target="blank"
+                  class="btn btn-primary"
+                  >Demo</a
+                >
               </div>
             </div>
           </div>
