Assign a link to "Check my projects" button

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,12 @@
             src="./img/profilePicture4.jpeg"
             alt="Bayardo Rivas"
           /><br />
-          <button class="btn btn-primary">Check my projects</button>
+          <a
+                  href="projects.html"
+                  target="blank"
+                  class="btn btn-primary"
+                  >Check my projects</a
+                >
         </div>
       </div>
     </main>
