--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h3>Hello My name is Bayardo Rivas,</h3>
           <h3>I am a Web developer</h3>
           <hr />
-          <h1>I would like help you to build effective web solutions</h1>
+          <h1>I would like to help you build effective solutions for the Web</h1>
         </div>
 
         <div class="container">
